--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: tox
+name: unit tests
 
 on:
   push:
@@ -24,7 +24,7 @@ jobs:
           python-version: ${{ matrix.python }}
       - name: Upgrade pip
         run: python -m pip install --upgrade pip
-      - name: Install requirements
-        run: python -m pip install -r requirements.txt
-      - name: Run pytest
+      - name: Install tox
+        run: python -m pip install tox
+      - name: Run tox
         run: tox
