--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: unit tests
+name: test, format and lint
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
@@ -28,3 +28,49 @@ jobs:
         run: python -m pip install tox
       - name: Run tox
         run: tox
+  format:
+    runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 4
+      matrix:
+        python: ["3.12"]
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python }}
+      - name: Upgrade pip
+        run: python -m pip install --upgrade pip
+      - name: Install tox
+        run: python -m pip install tox
+      - name: Run autoflake
+        run: tox -e autoflake
+      -name: Run isort
+        run: tox -e isort
+      -name: Run black
+        run: tox -e black
+  
+  lint:
+    runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 4
+      matrix:
+        python: ["3.12"]
+    needs: format
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python }}
+      - name: Upgrade pip
+        run: python -m pip install --upgrade pip
+      - name: Install tox
+        run: python -m pip install tox
+      - name: Run flake8
+        run: tox -e flake8
+  
+
+
