--- a/tox.ini
+++ b/tox.ini
@@ -12,9 +12,13 @@ basepython = python3
 usedevelop = false
 deps =
     -r requirements.txt
+    coverage
+    unittest-xml-reporting
 changedir = {toxinidir}/website
 commands =
-    {envpython} manage.py test
+    coverage run manage.py test -v2
+    coverage xml -o {toxinidir}/build/coverage.xml
+    coverage report
 
 [testenv:black]
 basepython = python3
