--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,6 +28,11 @@ jobs:
         run: python -m pip install tox
       - name: Run tox
         run: tox
+      - name: Publish coverage
+        uses: MishaKav/pytest-coverage-comment@main
+        with:
+          pytest-xml-coverage-path: ./build/coverage.xml
+          junitxml-path: ./build/tests.xml
 
   format:
     runs-on: ubuntu-latest
